--- a/.github/workflows/trigger-centralized-tests.yml
+++ b/.github/workflows/trigger-centralized-tests.yml
@@ -13,5 +13,5 @@ jobs:
         curl -X POST \
           -H "Accept: application/vnd.github.v3+json" \
           -H "Authorization: token $TOKEN" \
-          --data '{"event_type": "run-backend-tests", "client_payload": {"api": "teama"}}' \
+          --data '{"event_type": "run-backend-tests", "client_payload": {"api": "apia"}}' \
           https://api.github.com/repos/antlhe/centralized-test/dispatches
