--- a/.github/workflows/trigger-centralized-tests.yml
+++ b/.github/workflows/trigger-centralized-tests.yml
@@ -5,19 +5,18 @@ on: [push, workflow_dispatch]
 jobs:
   trigger-centralized-tests:
     runs-on: ubuntu-latest
-    env:
-      UNIQUE_ID: ${{ github.run_id }}-${{ github.run_number }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Trigger Repository Dispatch Event
         env:
           CENTRALIZED_PAT: ${{ secrets.CENTRALIZED_PAT }}
+          UNIQUE_ID: ${{ github.run_id }}-${{ github.run_number }}
         run: |
           curl -X POST \
             -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: token $CENTRALIZED_PAT" \
-            --data '{"event_type": "run-backend-tests", "client_payload": {"api": "apia", "unique_id": "$UNIQUE_ID"}}' \
+            --data "{\"event_type\": \"run-backend-tests\", \"client_payload\": {\"api\": \"apia\", \"unique_id\": \"$UNIQUE_ID\"}}" \
             https://api.github.com/repos/antlhe/centralized-test/dispatches
 
   wait-for-results:
@@ -53,10 +52,10 @@ jobs:
 
           # If artifact is found, download it
           curl -L -o artifact.zip -H "Authorization: token $CENTRALIZED_PAT" "$artifact_url"
-          
+
           # Unzip the artifact
           unzip artifact.zip
-          
+
           # Assume the artifact contains a file named 'results.json'
           # Check the test results
           if jq -e '.conclusion == "success"' < results.json; then
